Fixed missing spaces between majors and minors. Added integer validation to university ID field. Added error text to GPA field.

--- a/frontend/src/app/portfolio/education-section/edit-education-dialog/edit-education-dialog.component.less
+++ b/frontend/src/app/portfolio/education-section/edit-education-dialog/edit-education-dialog.component.less
@@ -3,6 +3,6 @@ mat-dialog-content {
   flex-direction: column;
 }
 
-list-input {
+#majors {
   margin-bottom: 24px;
 }
